# norma

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: infra.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
docker/: clickhouse-config.xml  langfuse-compose.yml  litellm-config.yaml
docs/: ARCHITECTURE.md  PEF.md  PROCESS.md  architecture_req005_changes.md  backlog.md  execution-model.md  findings.md  langfuse-various-config-tests.md  norma-requirements.md  req-006.md  vision.md
evals/: spec_quality.yaml
prompts/: cai_gate.yaml  conflict_analyst.yaml  environment_advisor.yaml  gherkin_specialist.yaml  intake.yaml  spec_advisor.yaml  spec_specialist_shell.yaml  stage1_gate.yaml  stage2_gate.yaml  technical_gherkin_specialist.yaml
scripts/: bootstrap.sh  infra-down.sh  infra-logs.sh  infra-restart.sh  infra-status.sh  infra-up.sh  output_utils.py  run_ab_test.py  run_cai_gate.py  run_full.py  run_gherkin_specialist.py  run_intake.py  run_nfr_specialist.py  run_node.py  run_pipeline.py  run_pipeline1.py  run_pipeline2.py  run_reverse_prompt.py  run_spec_advisor.py  seed_prompts.py  test_langfuse.py  test_litellm.py
src/norma/: settings.py
tests/: test_nfr_specialist.py  test_node_gates.py  test_node_gherkin_specialist.py  test_node_intake.py  test_spec_advisor.py  test_spec_specialist.py
tests/fixtures/: state_empty.json  state_post_intake.json  state_post_spec_advisor.json  state_post_specialists.json  state_post_stage1.json  state_post_tech_gherkin.json  (+1 more)
(+32 files in other folders)
